Update and rename sample_config.env to config.env

--- a/config.env
+++ b/config.env
@@ -3,13 +3,13 @@
 
 #________COMPULSORY____________
 
-TG_BOT_TOKEN= ""
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
+TG_BOT_TOKEN= "7098249382:AAFGbLY6dZg2GVHat02aQthlRXWMqUO1Auo"
+APP_ID = "21244730"
+API_HASH = "1e24a203ac426129ad572cac782fe9d6"
+OWNER_ID = 5866664347
 
 # Add different ID separated by a SPACE (Like :: AUTH_CHANNEL = -10012503747 -10012586941 539295917)
-AUTH_CHANNEL = 
+AUTH_CHANNEL = -1002167175645
 
 
 #__________NOT ________COMPULSORY____________ ::
